tests/spec/non_conformant/errors/invalid_operation/times.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-operation/times.hrx"

// Ignoring "test", error tests are not supported yet.
